modify structure of folders and add config files to nginx and mariadb

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,10 +1,13 @@
+DOMAIN_NAME=https://tbillon.42.fr
 MYSQL_DB=wordpress
 MYSQL_USR=wordpress_user
 MYSQL_PSWD=wordpress_password
 #wordpress
-ADMIN_USR=root
-ADMIN_PSWD=root
-ADMIN_EMAIL=root@root.com
+WORDPRESS_DB_HOST=mysql
+WORDPRESS_DB_NAME=db_name
+WORDPRESS_USR=root
+WORDPRESS_PSWD=root
+WORDPRESS_TABLE_PREFIX=wp_
 
 USER_NAME=user
 USER_PSWD=user
