--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - 3306:3306
     env_file: .env
     volumes:
-      - db:/var/lib/mysql
+      - db:/var/lib/mysql/
     restart: always
     networks:
       - inception
