--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:443 ssl http2;
 
     ssl_certificate /etc/ssl/tbillon.crt;
-    ssl_certificate_key /etc/ssl/tbillon.key
+    ssl_certificate_key /etc/ssl/tbillon.key;
 
     ssl_protocol TLSv1.2 TLSv1.3;
 
