--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: tanguy <tanguy@student.42.fr>              +#+  +:+       +#+         #
+#    By: tbillon <tbillon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/05 10:29:24 by tanguy            #+#    #+#              #
-#    Updated: 2021/10/14 11:59:23 by tanguy           ###   ########.fr        #
+#    Updated: 2021/10/20 13:12:46 by tbillon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,8 +32,8 @@ RUN openssl req -newkey rsa:4096 \
     -subj "/C=FR/ST=Lyon/L=Lyon/O=42School/OU=tbillon/CN=tbillon"
 
 # Copy confile files
-COPY		conf/nginx.conf /etc/nginx/http.d/default.conf
-RUN			ln -fs /etc/nginx/http.d/default.conf /etc/nginx/conf.d/default.conf
+COPY		conf/nginx.conf /etc/nginx/sites-available
+#RUN			ln -fs /etc/nginx/http.d/default.conf /etc/nginx/conf.d/default.conf
 
 # Start server
 CMD			["nginx", "-g", "daemon off;"]
