--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -20,8 +20,8 @@ volumes:
 
 services:
   nginx:
-    depends_on: #Express dependency between services. Start services in depedency order
-      - wordpress
+    # depends_on: #Express dependency between services. Start services in depedency order
+    #   - wordpress
     build: ./requirements/nginx #build from the Dockerfile in the dir
     container_name: nginx
     ports:
@@ -32,28 +32,28 @@ services:
     networks: #Set the network containers connect to for the RUN instructions during build
       - inception
 
-  wordpress:
-    depends_on:
-      - mariadb
-    build: ./requirements/wordpress
-    container_name: wordpress
-    ports:
-      - 9000:9000
-    env_file: .env #specify en environement file to work with
-    volumes:
-        - wordpress:/var/www/
-    restart: always
-    networks:
-      - inception
+  # wordpress:
+  #   depends_on:
+  #     - mariadb
+  #   build: ./requirements/wordpress
+  #   container_name: wordpress
+  #   ports:
+  #     - 9000:9000
+  #   env_file: .env #specify en environement file to work with
+  #   volumes:
+  #       - wordpress:/var/www/
+  #   restart: always
+  #   networks:
+  #     - inception
 
-  mariadb:
-    build: ./requirements/mariadb
-    container_name: mariadb
-    ports:
-      - 3306:3306
-    env_file: .env
-    volumes:
-      - db:/var/lib/mysql/
-    restart: always
-    networks:
-      - inception
+  # mariadb:
+  #   build: ./requirements/mariadb
+  #   container_name: mariadb
+  #   ports:
+  #     - 3306:3306
+  #   env_file: .env
+  #   volumes:
+  #     - db:/var/lib/mysql/
+  #   restart: always
+  #   networks:
+  #     - inception
