--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,22 +6,27 @@
 #    By: tbillon <tbillon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/05 10:29:24 by tanguy            #+#    #+#              #
-#    Updated: 2021/10/20 13:42:50 by tbillon          ###   ########.fr        #
+#    Updated: 2021/10/27 12:44:32 by tbillon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FROM    debian:buster
 LABEL   maintainer="tbillon"
 
-#update
+#Update
 RUN apt-get -y update
-#install nginx
+
+#Install nginx
 RUN apt-get -y install nginx
 
-#install openssl
+#Install openssl
 RUN apt-get install openssl
 
-#generate keys
+#Open access Rights
+RUN     chown -R www-data /var/www/*
+RUN     chmod -R 755 /var/www/*
+
+#Generate keys and self signed SSL Certificates
 RUN openssl req -newkey rsa:4096 \
     -x509 \
     -sha256 \
@@ -31,13 +36,19 @@ RUN openssl req -newkey rsa:4096 \
     -keyout /etc/ssl/tbillon.key \
     -subj "/C=FR/ST=Lyon/L=Lyon/O=42School/OU=tbillon/CN=tbillon"
 
-# Copy confile files
-COPY    conf/default etc/nginx/sites-available
-RUN     chown -R www-data /var/www/*
-RUN     chmod -R 755 /var/www/*
+#Generate website folder
+RUN     mkdir /var/www/mywebsite && touch /var/www/mywebsite/index.html
+COPY    conf/index.html /var/www/mywebsite/index.html
 
-# Start server
+#Configure Nginx
+COPY    conf/nginx.conf /etc/nginx/sites-available/mywebsite
+RUN     ln -s /etc/nginx/sites-available/mywebsite /etc/nginx/sites-enabled/mywebsite	
+RUN     rm -rf /etc/nginx/sites-enabled/default 
+RUN     mkdir /var/www/mywebsite/nginx
+#COPY    /var/www/html/index.nginx-debian.html /var/www/mywebsite/nginx/index.nginx-debian.html
+
+#Start server
 CMD			["nginx", "-g", "daemon off;"]
 
-# Ports
+#Ports
 EXPOSE		443
