Del index_nginx perso && reconf

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,7 +8,7 @@ server{
 	ssl_certificate /etc/ssl/tbillon.crt;
 	ssl_certificate_key /etc/ssl/tbillon.key;
 
-	root /var/www/wordpress; # specifiy the decirectory where nginx is gonna search from
+	root /var/www/mywebsite; # specifiy the decirectory where nginx is gonna search from
 	index index.html index.htm index.php;
 
 	location / {
