--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,7 +6,7 @@
 #    By: tbillon <tbillon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/05 10:29:24 by tanguy            #+#    #+#              #
-#    Updated: 2021/10/27 12:54:50 by tbillon          ###   ########.fr        #
+#    Updated: 2021/10/27 13:02:19 by tbillon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -37,15 +37,14 @@ RUN openssl req -newkey rsa:4096 \
     -subj "/C=FR/ST=Lyon/L=Lyon/O=42School/OU=tbillon/CN=tbillon"
 
 #Generate website folder
-RUN     mkdir /var/www/mywebsite && touch /var/www/mywebsite/index.html
-COPY    conf/index.html /var/www/mywebsite/index.html
+RUN     mkdir /var/www/mywebsite
 
 #Configure Nginx
 COPY    conf/nginx.conf /etc/nginx/sites-available/mywebsite
 RUN     ln -s /etc/nginx/sites-available/mywebsite /etc/nginx/sites-enabled/mywebsite	
 RUN     rm -rf /etc/nginx/sites-enabled/default 
 RUN     mkdir /var/www/mywebsite/nginx
-COPY    /var/www/html/index.nginx-debian.html /var/www/mywebsite/nginx/index.nginx-debian.html
+#COPY    /var/www/html/index.nginx-debian.html /var/www/mywebsite/nginx/index.nginx-debian.html
 
 #Start server
 CMD			["nginx", "-g", "daemon off;"]
