config wordpress && dokerfile for wordpress

--- a/srcs/.env
+++ b/srcs/.env
@@ -7,6 +7,7 @@ WORDPRESS_DB_HOST=mysql
 WORDPRESS_DB_NAME=db_name
 WORDPRESS_USR=root
 WORDPRESS_PSWD=root
+WORDPRESS_EMAIL=root@root.com
 WORDPRESS_TABLE_PREFIX=wp_
 
 USER_NAME=user
