--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,7 +6,7 @@
 #    By: tbillon <tbillon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/08 11:50:22 by tanguy            #+#    #+#              #
-#    Updated: 2021/10/28 10:50:46 by tbillon          ###   ########.fr        #
+#    Updated: 2021/10/28 12:45:46 by tbillon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,7 +29,7 @@ RUN     chown -R mysql:mysql /var/lib/mysql
 RUN     chmod 777 /var/lib/*
 
 #Start server
-CMD	    ["bash", "conf/install_db.sh"]
+CMD	    ["bash", "install_db.sh"]
 
 #Ports
 EXPOSE		3306
