--- a/srcs/requirements/mariadb/conf/mariadb.cnf
+++ b/srcs/requirements/mariadb/conf/mariadb.cnf
@@ -1,4 +1,11 @@
 [mysqld]
-port=3306
-bind-address=0.0.0.0
-skip-networking=true
+user                    = root
+pid-file                = /run/mysqld/mysqld.pid
+socket                  = /run/mysqld/mysqld.sock
+basedir                 = /usr
+datadir                 = /var/lib/mysql
+tmpdir                  = /tmp
+lc-messages-dir         = /usr/share/mysql
+port                    = 3306
+bind-address            = 0.0.0.0
+skip-networking         = true
