update mariadb config && dockerfile

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: tbillon <tbillon@student.42.fr>            +#+  +:+       +#+         #
+#    By: Tanguy <Tanguy@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/08 11:50:22 by tanguy            #+#    #+#              #
-#    Updated: 2021/10/28 12:45:46 by tbillon          ###   ########.fr        #
+#    Updated: 2021/11/02 11:07:47 by Tanguy           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ RUN apt-get install -y mariadb-server mariadb-client
 
 #Copy confg files
 COPY	conf/install_db.sh ./
-RUN		rm /etc/mysql/mariadb.conf.d/50-server.cnf
+#RUN		rm /etc/mysql/mariadb.conf.d/50-server.cnf
 COPY	conf/mariadb.cnf /etc/mysql/mariadb.conf.d/
 
 #Open rights
