upload Makefile && docker-compose

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,15 +1,8 @@
-DOMAIN_NAME=https://tbillon.42.fr
-MYSQL_DB=wordpress
-MYSQL_USR=wordpress_user
-MYSQL_PSWD=wordpress_password
-#wordpress
-WORDPRESS_DB_HOST=mysql
-WORDPRESS_DB_NAME=db_name
-WORDPRESS_USR=root
-WORDPRESS_PSWD=root
-WORDPRESS_EMAIL=root@root.com
-WORDPRESS_TABLE_PREFIX=wp_
-
-USER_NAME=user
-USER_PSWD=user
-USER_EMAIL=user@user.com
+MYSQL_HOST=https://tbillon.42.fr
+MYSQL_ROOT_PWD=mysql_root_pwd
+WP_DB_NAME=wp_db
+WP_DB_USER=wp_usr
+WP_DB_PWD=wp_pwd123456
+WP_ADMIN_USR=wp_adm
+WP_ADMIN_PWD=wp_adm_pwd
+WP_AMIN_MAIL=wp_adm_mail
