--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,7 @@
 MYSQL_HOST=https://tbillon.42.fr
 MYSQL_ROOT_PWD=mysql_root_pwd
 WP_DB_NAME=wp_db
-WP_DB_USER=wp_usr
+WP_DB_USR=wp_usr
 WP_DB_PWD=wp_pwd123456
 WP_ADMIN_USR=wp_adm
 WP_ADMIN_PWD=wp_adm_pwd
