--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,20 +1,25 @@
 server{
 
-	listen 443 ssl ;
-	listen [::]:443 ssl ;
+	listen 443 ssl;
+	listen [::]:443 ssl;
 	
 	server_name tbillon;
 	
-	ssl_certificate /etc/ssl/tbillon.crt;
-	ssl_certificate_key /etc/ssl/tbillon.key;
+	ssl_certificate /etc/nginx/ssl/tbillon.crt;
+	ssl_certificate_key /etc/nginx/ssl/tbillon.key;
+	ssl_protocols TLSv1.2 TLSv1.3;
 
 	root /var/www/mywebsite; # specifiy the decirectory where nginx is gonna search from
-	index index.html index.htm index.php;
+	index index.html index.php;
 
 	location / {
 		autoindex on;
 		try_files $uri $uri/ =404;
 	}
 
-	include /etc/nginx/conf.d/*.conf;
+	location ~ ^/.+\.php(/|$) {
+		fastcgi_pass wordpress:9000;
+		include fastcgi_param;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	}
 }
