wordpress ok && update README.md

--- a/srcs/.env
+++ b/srcs/.env
@@ -5,4 +5,4 @@ WP_DB_USR=wp_usr
 WP_DB_PWD=wp_pwd123456
 WP_ADMIN_USR=wp_adm
 WP_ADMIN_PWD=wp_adm_pwd
-WP_AMIN_MAIL=wp_adm_mail
+WP_AMIN_MAIL=tbillon@student.42lyon.fr
