--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -6,7 +6,7 @@
 #    By: tbillon <tbillon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/08 11:57:03 by tanguy            #+#    #+#              #
-#    Updated: 2021/10/27 15:12:21 by tbillon          ###   ########.fr        #
+#    Updated: 2022/03/07 09:49:44 by tbillon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,28 +16,39 @@ LABEL   maintainer="tbillon"
 #update 
 RUN apt-get -y update
 
-#install packages needed
+#install independents packages needed
 RUN apt-get -y install wget
 RUN apt-get -y install curl
 RUN apt-get -y install unzip
 
-#install php
-RUN     apt-get -y install php7.3 php7.3-fpm php7.3-mysql php-common php7.3-common php7.3-json php7.3-readline
+#install php and all packages
+RUN     apt-get -y install php7.4 php7.4-fpm php7.4-mysql \
+        php-common php7.4-zlib php7.4-xmlwrtier php7.4-simplexml \
+        php7.4-pdo php7.4-common php7.4-json php7.4-readline php7.4-phar php7.4-openssl \
+        php7.4-pdo_mysql php7.4-mysqli php7.4-session php7.4-gd php7.4 -iconv \
+        php7.4-mcrypt php7.4-gmp php7.4-zip php7.4-curl php7.4-opcache \
+        php7.4-ctype php7.4-apcu php7.4-intl php7.4-bmatch php7.4-dom \
+        php7.4-mbstring php7.4-xmlreaderß
 
-COPY    conf/wp-config.php ./
-COPY    conf/www.conf /etc/php/7.3/fpm/pool.d
-COPY    conf/start.sh ./
+#download config && open rights
+RUN     mysql mysql-client openrc \
+        && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+        && chmod +x wp-cli.phar \
+        && mv wp-cli.phar /usr/bin/wp
 
-#download config && open rights 
-RUN     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN     chmod +x wp-cli.phar
-RUN     mv wp-cli.phar /usr/local/bin/wp
+#Copy config files for php
+COPY conf/php-fpm.conf /etc/php7.4/php-fpm.conf
+COPY conf/www.conf /etc/php7.4/php-fpm.d/www.conf
+
+#Define working directory (Define the working directory of the container)
+WORKDIR  /var/www/html/wordpress
+
+#Configure wordpress (700 code = rwx for the owner only)
+COPY    tools/init.sh ./
+RUN     chmod 700 init.sh
 
 #Open rights on start.sh file
 RUN     chmod +x start.sh
 
-# Start server
-CMD	["/start.sh"]
-
-# Ports
-EXPOSE		9000
+#execute init.sh
+CMD	bash init.sh
