--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -13,8 +13,8 @@
 FROM    debian:buster
 LABEL   maintainer="tbillon"
 
-#update 
-RUN apt-get -y update
+#update and upgrade system
+RUN apt-get -y update && apt-get -y upgrade
 
 #install independents packages needed
 RUN apt-get -y install wget
@@ -22,17 +22,10 @@ RUN apt-get -y install curl
 RUN apt-get -y install unzip
 
 #install php and all packages
-RUN     apt-get -y install php7.4 php7.4-fpm php7.4-mysql \
-        php-common php7.4-zlib php7.4-xmlwrtier php7.4-simplexml \
-        php7.4-pdo php7.4-common php7.4-json php7.4-readline php7.4-phar php7.4-openssl \
-        php7.4-pdo_mysql php7.4-mysqli php7.4-session php7.4-gd php7.4 -iconv \
-        php7.4-mcrypt php7.4-gmp php7.4-zip php7.4-curl php7.4-opcache \
-        php7.4-ctype php7.4-apcu php7.4-intl php7.4-bmatch php7.4-dom \
-        php7.4-mbstring php7.4-xmlreaderß
+RUN     apt-get -y install php php-common
 
 #download config && open rights
-RUN     mysql mysql-client openrc \
-        && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+RUN     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
         && chmod +x wp-cli.phar \
         && mv wp-cli.phar /usr/bin/wp
 
@@ -46,9 +39,6 @@ WORKDIR  /var/www/html/wordpress
 #Configure wordpress (700 code = rwx for the owner only)
 COPY    tools/init.sh ./
 RUN     chmod 700 init.sh
-
-#Open rights on start.sh file
-RUN     chmod +x start.sh
 
 #execute init.sh
 CMD	bash init.sh
